# PicFilters

./: CMakeLists.txt
include/: bmp.hpp
src/: ColorFilter.cpp  ColorFilter.h  Emboss.cpp  Emboss.h  Filter.cpp  Filter.h  GBlur.cpp  GBlur.h  GrayScale.cpp  GrayScale.h  Invert.cpp  Invert.h  KernelFilter.cpp  KernelFilter.h  Sharpen.cpp  Sharpen.h  bmp.cpp  main.cpp  manual.h
